--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -45,7 +45,7 @@
     "            K = float(row[1])\n",
     "            break\n",
     "    else :\n",
-    "        print('오타')\n",
+    "        print('앗! 용액 이름이 잘못 되었나보군요! 흥분된 마음을 가라앉히고 다시 한 번 더 입력해주세요.')\n",
     "    \n",
     "    ida = (K/c1)**0.5\n",
     "    if ida > 0.05:\n",
@@ -87,7 +87,7 @@
     "            K = float(row[1])\n",
     "            break\n",
     "    else :\n",
-    "        print('오타')\n",
+    "        print('앗! 용액 이름이 잘못 되었나보군요! 흥분된 마음을 가라앉히고 다시 한 번 더 입력해주세요.')\n",
     "    \n",
     "    idb = (K/c1)**0.5\n",
     "    if idb > 0.05 :\n",
