--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -11,16 +11,17 @@
      "text": [
       "적정할 용액의 액성과 이름을 순서대로 입력해주세요(예: 산, 염산)\n",
       "None염기\n",
-      "암모니아수\n",
+      "ㅇㅁ\n",
       "그 용액의 부피(L)는 얼마입니까?\n",
-      "None0.01\n",
+      "None0.1\n",
       "그 용액의 농도(mol/L)는 얼마입니까?\n",
-      "None0.1\n",
+      "None0.01\n",
       "표준용액의 부피(L)는 얼마입니까?\n",
-      "None0.005\n",
-      "표준용액의 농도(mol/L)는 얼마입니까?\n",
       "None0.1\n",
-      "9.255272505103306\n"
+      "표준용액의 농도(mol/L)는 얼마입니까?\n",
+      "None0.01\n",
+      "앗! 용액 이름이 잘못 되었나보군요! 흥분된 마음을 가라앉히고 다시 한 번 더 입력해주세요.\n",
+      "7\n"
      ]
     }
    ],
@@ -78,7 +79,10 @@
     "                elif v2 > v:\n",
     "                    pOH = -math.log((c2*v2-c1*v1)/(v1+v2))\n",
     "                    print(14-pOH)\n",
-    "if a == '염기' :\n",
+    "                    \n",
+    "    f.close()\n",
+    "    \n",
+    "elif a == '염기' :\n",
     "    import csv \n",
     "    f = open('base ionization constant.csv')\n",
     "    data = csv.reader(f)\n",
@@ -117,7 +121,10 @@
     "                else :\n",
     "                    pH = -math.log10((c2*v2-c1*v1)/(v1+v2))\n",
     "                    print(pH)\n",
-    "            \n",
+    "    f.close()\n",
+    "    \n",
+    "else :\n",
+    "    print('용액의 액성을 정확히 기입했나요? 당신의 아름다운 마음으로 천천히 다시 한 번 더 입력해보세요.')\n",
     "    \n"
    ]
   },
