--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -45,6 +45,7 @@
     "        if name == row[0] :\n",
     "            K = float(row[1])\n",
     "            break\n",
+    "    #이온화 상수가 기재되어있는 csv파일을 이용해서 산이름만 입력하면 자동으로 이온화상수 값을 얻는다.
     "    else :\n",
     "        print('앗! 용액 이름이 잘못 되었나보군요! 흥분된 마음을 가라앉히고 다시 한 번 더 입력해주세요.')\n",
     "    \n",
@@ -90,11 +91,14 @@
     "        if name == row[0] :\n",
     "            K = float(row[1])\n",
     "            break\n",
+    "# 염기에서도 이온화 상수가 기재되어있는 csv파일을 이용해서 염기이름만 입력하면 자동으로 이온화상수 값을 얻는다.
     "    else :\n",
     "        print('앗! 용액 이름이 잘못 되었나보군요! 흥분된 마음을 가라앉히고 다시 한 번 더 입력해주세요.')\n",
     "    \n",
+    " #이온화도를 구한다.
     "    idb = (K/c1)**0.5\n",
     "    if idb > 0.05 :\n",
+    " #위에서 구한 이온화도가 0.05보다 크면 산염기 근사가 안되므로 직접구한다.
     "        if v2 == 0 :\n",
     "                pH = 14 + math.log10(c1)\n",
     "                print(pH)\n",
@@ -107,6 +111,7 @@
     "                    print(14 - pOH)\n",
     "                else :\n",
     "                    print(14 + math.log10((c2*v2-c1*v1)/(v2+v1)))\n",
+    " #위에서 구한 이온화도가 0.05보다 작으면 산염기 근사가 가능하다.
     "    if idb < 0.05 :\n",
     "        if v2 == 0 :\n",
     "            print(14+0.5*math.log10(c1*K))\n",
